# qiskit-practice

./: .editorconfig  .gitignore  INSTALL.md  README.md  getting-started.md  package.json  pyproject.toml
.github/: CODEOWNERS
lecture0/: 브라켓_표기법.ipynb
lecture1/: 파울리X게이트.ipynb
